Prevent token names from wrapping

--- a/docs/src/styles/token-table.css
+++ b/docs/src/styles/token-table.css
@@ -1,3 +1,7 @@
 .token-table .referenced-tokens {
     color: rgba(51, 51, 51, 0.8);
 }
+
+.token-table .token-name {
+    white-space: nowrap;
+}
